// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package clusrun;

service Headnode {
  rpc Heartbeat (HeartbeatRequest) returns (Empty) {}
  rpc GetNodes (Empty) returns (GetNodesReply) {}
}

service Clusnode {
  rpc StartJob (StartJobRequest) returns (Empty) {}
  rpc CancelJob (CancelJobRequest) returns (Empty) {}
  rpc Validate (ValidateRequest) returns (ValidateReply) {}
  rpc SetHeadnodes(SetHeadnodesRequest) returns (SetHeadnodesReply) {}
  rpc GetHeadnodes(Empty) returns (GetHeadnodesReply) {}
}

message Empty {
}

message HeartbeatRequest {
  string node = 1;
  string host = 2;
}

message StartJobRequest {
  string command = 1;
  uint32 id = 2;
}

message CancelJobRequest {
  uint32 id = 1;
  bool force = 2;
}

message ValidateRequest {
  string headnode = 1;
  string clusnode = 2;
}

message ValidateReply {
  string nodename = 1;
}

message GetNodesReply {
  repeated string ready_nodes = 1;
  repeated string error_nodes = 2;
  repeated string lost_nodes = 3;
}

message SetHeadnodesRequest {
  repeated string headnodes = 1;
}

message SetHeadnodesReply {
  map<string, string> results = 1;
}

message GetHeadnodesReply {
  map<string, bool> headnodes = 1;
}